WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265405
AV1-in-MP4 codec string not shown in Show Media Stats
https://bugs.webkit.org/show_bug.cgi?id=265405
Summary
AV1-in-MP4 codec string not shown in Show Media Stats
Jer Noble
Reported
2023-11-27 14:06:27 PST
AV1-in-MP4 codec string not shown in Show Media Stats
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-27 14:06:42 PST
<
rdar://problem/118850797
>
Jer Noble
Comment 2
2023-11-27 14:22:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20955
EWS
Comment 3
2023-11-27 23:20:28 PST
Committed
271187@main
(e5529dfe6aa4): <
https://commits.webkit.org/271187@main
> Reviewed commits have been landed. Closing PR #20955 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug