AV1-in-MP4 codec string not shown in Show Media Stats https://bugs.webkit.org/show_bug.cgi?id=265405 rdar://118850797

Reviewed by Eric Carlson.

Support extracting AV1 codec configuration information from the FormatDescription.

* Source/WebCore/platform/graphics/AV1Utilities.cpp:
(WebCore::parseAV1DecoderConfigurationRecord):
* Source/WebCore/platform/graphics/AV1Utilities.h:
* Source/WebCore/platform/graphics/avfoundation/FormatDescriptionUtilities.cpp:
(WebCore::codecFromFormatDescription):

Canonical link: https://commits.webkit.org/271187@main