Source/WebCore/platform/graphics/AV1Utilities.h
@@ -174,6 +174,8 @@ WEBCORE_EXPORT String createAV1CodecParametersString(const AV1CodecConfiguration
 
 WEBCORE_EXPORT bool validateAV1PerLevelConstraints(const AV1CodecConfigurationRecord&, const VideoConfiguration&);
 
+std::optional<AV1CodecConfigurationRecord> parseAV1DecoderConfigurationRecord(const SharedBuffer&);
+
 }
 
 namespace WTF {
